Fix page-jumper background

--- a/skins/chameleon/styles.less
+++ b/skins/chameleon/styles.less
@@ -1536,6 +1536,10 @@ a.button span.icon,
 	text-shadow: none;
 }
 
+.pagenav .pagejumper {
+	background: #fff;
+}
+
 .pagenavbuttons {
 	top: 0;
 }
